Path icon and app name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Quest</string>
+    <string name="app_name">Опыт Архимеда</string>
     <string name="task">Задание №3 (буква «Л»)  </string>
     <string name="video">Задание №4 (буква «К»)</string>
     <string name="quest">Задание №5. Повтори опыт, который был представлен в интерактивном видео</string>
